Tue Sep 20 15:13:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/CallbackTest/CallbackTest.mpc:
        * tests/CallbackTest/Callback{.h .cpp}:
        * tests/CallbackTest/Test.idl:
        * tests/CallbackTest/Service{.h .cpp}:
        * tests/CallbackTest/client.cpp:
        * tests/CallbackTest/server.cpp:
        * tests/CallbackTest/run_test.pl:
        * tests/CallbackTest/run_test_ipv6.pl:
        * tests/CallbackTest/run_test_mixed_ip.pl:
        * tests/CallbackTest/README:

          Added new test.

Tue Sep 20 08:39:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/tests/Notify/Basic/run_test_ipv6.pl:

          Added IPV6 specific testscript.

Tue Sep 20 08:32:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * orbsvcs/tests/IOR_MCast/ior_mcast_client_i.cpp:

          Added some traces to be able to see testresult.

        * orbsvcs/tests/IOR_MCast/run_test_ipv6.pl:

          Added IPV6 specific testscript.

Tue Sep 20 08:26:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tests/BiDirectional/run_test_ipv6.pl:

          Added IPV6 specific testscript.

Tue Sep 20 08:23:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * tao/IIOP_Acceptor.cpp:
        * tao/IIOP_Endpoint.cpp:
        * tao/Invocation_Endpoint_Selectors.cpp:

          Improvements for IPv6 support.

Mon Sep 19 20:46:14 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * orbsvcs/orbsvcs/PortableGroup/PG_ObjectGroupManager.cpp:

          Removed run-time assertions.  They generally shouldn't be used
          in infrastructure code. Favor returning and checking error
          conditions and/or throwing exceptions instead.

Mon Sep 19 16:14:09 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * orbsvcs/orbsvcs/CosEvent/CEC_Reactive_ConsumerControl.cpp: Fixed the
          initialization of the event_channel_ and typed_event_channel_
          data members.  Thanks to Lukas Gruetzmacher